<resources>
    <string name="app_name">NewsApp</string>
    <string name="supervision_text">Supervised by Muhammad Nabil</string>
    <string name="news_app">News App</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="pick_category_text">Pick your category\nof interest</string>
    <string name="sports_text">Sports</string>
    <string name="health_text">Health</string>
    <string name="environment_text">Environment</string>
    <string name="politics_text">Politics</string>
    <string name="business_text">Business</string>
    <string name="science_text">Science</string>
    <string name="no_articles_text">No Articles Available at the time</string>
    <string name="no_sources">No Sources for this Category</string>
    <string name="view_full_article">View Full Article</string>
    <string name="search_bar_label">Search for an article</string>
    <string name="language_label">Language</string>
    <string name="english_language">English</string>
    <string name="arabic_language">Arabic</string>
</resources>