<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/headline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/pick_category_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- the 3 left containers-->
    <LinearLayout
        android:id="@+id/sports_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_left_category_background"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:onClick="onCategoryClick"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline_text"
        app:layout_constraintWidth_percent="0.37">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_sports" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/health_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_left_category_background"
        android:backgroundTint="@color/pink"
        android:gravity="center"
        android:onClick="onCategoryClick"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sports_container"
        app:layout_constraintWidth_percent="0.37">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_health" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- the 3 right containers-->
    <LinearLayout
        android:id="@+id/politics_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_right_category_background"
        android:backgroundTint="@color/dark_blue"
        android:gravity="center"
        android:onClick="onCategoryClick"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/headline_text"
        app:layout_constraintWidth_percent="0.37">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_politics" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/business_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_right_category_background"
        android:backgroundTint="@color/dark_orange"
        android:gravity="center"
        android:onClick="onCategoryClick"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/politics_container"
        app:layout_constraintWidth_percent="0.37">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_business" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>